tests/test_exception/good/two_unlabeled_exceptions.catala_en
## Test

```catala
declaration scope A:
  context x content integer
  context y content integer

scope A:
  definition x equals 0

  exception
  definition x equals 1

  definition y equals 2

  exception
  definition y equals 3
```
