tests/test_exception/bad/ambiguous_unlabeled_exception.catala_en
## Test

```catala
declaration scope A:
  context x content integer

scope A:
  definition x equals 0

  definition x equals 1

  exception
  definition x equals 2
```
